<resources>
    <string name="app_name">Dzin</string>
    <string name="start_time">Начало</string>
    <string name="stop_time">Окончание</string>
    <string name="next_time">Сработает в</string>
    <string name="period">Период</string>
    <string name="is_active">Активен</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="restart">Старт</string>
    <string name="rest">Осталось</string>
    <string name="sound">Звук</string>
    <string name="next_time_not_defined">Не задано</string>
    <string name="rest_time_not_defined"></string>
</resources>
