<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.iconstanta.dzin.MainActivity">


    <Button
        android:text="@string/restart"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/StartButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="onSrartButtonClick" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/StartButton"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:layout_height="match_parent"
            android:id="@+id/Left">

            <Switch
                android:text="@string/is_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ActiveSwitch"
                android:checked="true"
                android:onClick="onActiveChanged"
                android:textStyle="normal|bold"
                android:textSize="18sp" />

            <TextView
                android:text="@string/next_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="15dp"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:text="@string/rest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="15dp"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:text="@string/start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/StartTextLabel"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:layout_marginTop="35dp"/>

            <TextView
                android:text="@string/stop_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/StopTextLabel"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="15dp"/>

            <TextView
                android:text="@string/period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PeriodTextLabel"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:layout_height="match_parent"
            android:id="@+id/Right"
            android:layout_marginLeft="25dp">

            <Switch
                android:text="@string/sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/SoundSwitch"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/next_time_not_defined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/next_time"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:text="@string/rest_time_not_defined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rest_time_period"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/StartTextValue"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="35dp"
                android:onClick="onStartClick" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/StopTextValue"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="15dp"
                android:onClick="onStopClick" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PeriodTextValue"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="15dp"
                android:onClick="onPeriodClicke" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
